# neural_rendering

include/rt/: CMakeLists.txt  neu_util.h  rt_trainer.h  torch_runner.h
include/rt/primitives/: bot.h
src/rt/: CMakeLists.txt  RenderDataset.py  gaussian_splatting.py  neural.c  rt_neural.cpp  rt_trainer.cpp  rtuif.h  simpleNet.py  torch_runner.cpp  torch_runner.h  train.py  train_neural.cpp  util.py  view.c  worker.c
src/rt/nvbh/: camera.py  local_cache.py  nvbh.py  nvbh_rgb.py
src/rt/nvbh/gridencoder/: backend.py  grid.py
